<resources>
    <string name="app_name">Hello Goodbye</string>
    <string name="action_settings">Settings</string>
    <string name="exclaim_btn">Exclamation</string>
    <string name="hello">Hello</string>
    <string name="goodbye">Goodbye</string>
    <string name="exclaim_img">Exclamation image</string>
    <string name="hi">Hi</string>
    <string name="john">John Barr</string>
    <string name="click_me">Click Me!</string>
</resources>
